# phdictionary

./: LICENSE  README.md  USAGE.md  __init__.py  dictionary.py  file_manager.py  main.py  phdictionary.py  purifier.py  requestor.py  setup.cfg
examples/: definition954.docx  definition_examples133.docx  french-english-examples164.docx
