[metadata]
name = maks_ser2
version = 0.0.1
author = RediIVIider
author_email = maksimsserovmail.ru@gmail.com
description = PhDictionary. The best tool for language learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RediIVIideR/phdictionary
project_urls =
    Bug Tracker = https://github.com/RediIVIideR/phdictionary
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = phdictionary
packages = find:
python_requires = >=3.6

[options.packages.find]
where = phdictionary